# abc

./: .gitignore  CMakeLists.txt  PY_README.md  README.md  wrapper.sh
ABC-python/: ABC.i  ABC.py  ABCHelpers.py  ABC_wrap.c  __init__.py  setup.cfg
ABC-python/ABC_macd.egg-info/: PKG-INFO  SOURCES.txt
src/base/abci/: abc.c
src/opt/ufar/: UfarCmd.cpp
src/proof/cec/: cecCorr.c  cecProve.c
tests/: test_cec.py  test_if.py  test_parse_stats.py  test_parse_stime.py  test_read_aig.py  test_read_blif.py  test_read_lib.py
tests/designs/aig/: cla_32.aig
tests/libraries/: sky130_tt.constr
