[metadata]
# replace with your username:
name = ABC-macd
version = 0.0.1
author = Don MacMillen
author_email = don@macmillen.net
description = A wrapper around Berkeley-abc
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/macd/abc
project_urls =
    Bug Tracker = https://github.com/macd/abc/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src